--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -63,77 +63,86 @@ block main
 				h1.h1-und Предоставляемые услуги
 			.services-block__wrap
 				.services-block__item
-					.serv__title
-						h3.h3 Сертификация систем менеджмента качества
-					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link.und
-						span Подробнее
-					.serv__icon
-						img(src="img/icons/iso-1.svg", alt="Img")
+					a(href='#').services-block__wrap-link
+						.serv__title
+							h3.h3 Сертификация систем менеджмента качества
+						.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+						.more-links.link-btn.podrobn-link.und
+							span Подробнее
+						.serv__icon
+							img(src="img/icons/iso-1.svg", alt="Img")
 				.services-block__item
-					.serv__title
-						h3.h3 Сертификация систем менеджмента качества
-					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link.und
-						span Подробнее
-					.serv__icon
-						img(src="img/icons/iso-2.svg", alt="Img")
+					a(href='#').services-block__wrap-link
+						.serv__title
+							h3.h3 Сертификация систем менеджмента качества
+						.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+						.more-links.link-btn.podrobn-link.und
+							span Подробнее
+						.serv__icon
+							img(src="img/icons/iso-2.svg", alt="Img")
 				.services-block__item
-					.serv__title
-						h3.h3 Сертификация систем менеджмента качества
-					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link.und
-						span Подробнее
-					.serv__icon
-						img(src="img/icons/iso-3.svg", alt="Img")
+					a(href='#').services-block__wrap-link
+						.serv__title
+							h3.h3 Сертификация систем менеджмента качества
+						.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+						.more-links.link-btn.podrobn-link.und
+							span Подробнее
+						.serv__icon
+							img(src="img/icons/iso-3.svg", alt="Img")
 				.services-block__item
-					.serv__title
-						h3.h3 Сертификация систем менеджмента качества
-					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link.und
-						span Подробнее
-					.serv__icon
-						img(src="img/icons/iso-4.svg", alt="Img")
+					a(href='#').services-block__wrap-link
+						.serv__title
+							h3.h3 Сертификация систем менеджмента качества
+						.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+						.more-links.link-btn.podrobn-link.und
+							span Подробнее
+						.serv__icon
+							img(src="img/icons/iso-4.svg", alt="Img")
 				.services-block__item
-					.serv__title
-						h3.h3 Сертификация систем менеджмента качества
-					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link.und
-						span Подробнее
-					.serv__icon
-						img(src="img/icons/iso-5.svg", alt="Img")
+					a(href='#').services-block__wrap-link
+						.serv__title
+							h3.h3 Сертификация систем менеджмента качества
+						.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+						.more-links.link-btn.podrobn-link.und
+							span Подробнее
+						.serv__icon
+							img(src="img/icons/iso-5.svg", alt="Img")
 				.services-block__item
-					.serv__title
-						h3.h3 Сертификация систем менеджмента качества
-					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link.und
-						span Подробнее
-					.serv__icon
-						img(src="img/icons/iso-5.svg", alt="Img")
+					a(href='#').services-block__wrap-link
+						.serv__title
+							h3.h3 Сертификация систем менеджмента качества
+						.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+						.more-links.link-btn.podrobn-link.und
+							span Подробнее
+						.serv__icon
+							img(src="img/icons/iso-5.svg", alt="Img")
 				.services-block__item
-					.serv__title
-						h3.h3 Сертификация систем менеджмента качества
-					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link.und
-						span Подробнее
-					.serv__icon
-						img(src="img/icons/iso-5.svg", alt="Img")
+					a(href='#').services-block__wrap-link
+						.serv__title
+							h3.h3 Сертификация систем менеджмента качества
+						.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+						.more-links.link-btn.podrobn-link.und
+							span Подробнее
+						.serv__icon
+							img(src="img/icons/iso-5.svg", alt="Img")
 				.services-block__item
-					.serv__title
-						h3.h3 Сертификация систем менеджмента качества
-					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link.und
-						span Подробнее
-					.serv__icon
-						img(src="img/icons/iso-8.svg", alt="Img")
+					a(href='#').services-block__wrap-link
+						.serv__title
+							h3.h3 Сертификация систем менеджмента качества
+						.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+						.more-links.link-btn.podrobn-link.und
+							span Подробнее
+						.serv__icon
+							img(src="img/icons/iso-8.svg", alt="Img")
 				.services-block__item
-					.serv__title
-						h3.h3 Сертификация систем менеджмента качества
-					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link.und
-						span Подробнее
-					.serv__icon
-						img(src="img/icons/iso-9.svg", alt="Img")
+					a(href='#').services-block__wrap-link
+						.serv__title
+							h3.h3 Сертификация систем менеджмента качества
+						.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
+						.more-links.link-btn.podrobn-link.und
+							span Подробнее
+						.serv__icon
+							img(src="img/icons/iso-9.svg", alt="Img")
 
 	.last-news
 		.last-news__title
