--- a/src/sass/layout/_article.scss
+++ b/src/sass/layout/_article.scss
@@ -69,6 +69,7 @@
 		margin-bottom: 85px;
 		.socail-date{
 			@extend .h3;
+			font-size: 1.1em;
 			display: block;
 			margin-bottom: 15px;
 			font-weight: 600;
