--- a/src/jade/_includes/_head/_head.jade
+++ b/src/jade/_includes/_head/_head.jade
@@ -1,14 +1,15 @@
 head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#")
 	meta(charset="utf-8")
 	meta(http-equiv='X-UA-Compatible', content="IE=edge,chrome=1")
-	
-	meta(name="viewport" content="width=device-width, initial-scale=1.0")
-	
+
+	meta(name="viewport" content="width=device-width")
+	//- meta(name="viewport" content="width=device-width, initial-scale=1.0")
+
 	title Международная Система Сертификации
 	meta(name="description" content="Международная Система Сертификации")
 	meta(name="keywords" content="")
 	meta(name="robots" content="INDEX,FOLLOW")
-		
+
 	link(rel="apple-touch-icon", sizes="57x57", href="favicon/apple-touch-icon-57x57.png")
 	link(rel="apple-touch-icon", sizes="60x60", href="favicon/apple-touch-icon-60x60.png")
 	link(rel="apple-touch-icon", sizes="72x72", href="favicon/apple-touch-icon-72x72.png")
@@ -26,6 +27,6 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#")
 	meta(name="msapplication-TileColor", content="#da532c")
 	meta(name="msapplication-TileImage", content="favicon/mstile-144x144.png")
 	meta(name="theme-color", content="#ffffff")
-		
+
 	//- include _socials.jade
 	link(rel='stylesheet' type='text/css' href='css/styles.css')
