--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -196,7 +196,7 @@
 		display: inline-block;
 		text-align: justify;
 		padding-bottom: 50px;
-		&:last-child:after{
+		&:after{
 			content: '';
 			width: 100%;
 			display: inline-block;
@@ -209,16 +209,20 @@
 		width: 250px;
 		min-height: 220px;
 		text-align: left;
-		padding: 20px 20px 60px 20px;
 		@include border-radius (5px);
 		box-shadow: 0px 1px 10px 0px rgba(67, 74, 84, 0.75);
 		margin-bottom: 30px;
 		background: #fff;
 	}
+
 	&__item:hover{
 		@include transition(.25s);
 		cursor: pointer;
 		background: #cbe8dd;
+	}
+	&__wrap-link{
+		display: block;
+		padding: 20px 20px 60px 20px;
 	}
 }
 .serv{
@@ -227,12 +231,19 @@
 		text-align: left;
 		color: $green;
 		line-height: 23px;
+		position: relative;
+		z-index: 2;
+		.h3 {
+			font-size: 1.1em;
+		}
 	}
 	&__descr{
-
+		position: relative;
+		z-index: 2;
 	}
 	&__icon{
 		position: absolute;
+		z-index: 1;
 		bottom: 20px;
 		right: 20px;
 		width: 65px;
