some fixes + added editor-style

--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -223,6 +223,11 @@
 	&__wrap-link{
 		display: block;
 		padding: 20px 20px 60px 20px;
+		&:hover{
+			.podrobn-link{
+				text-decoration: underline;
+			}
+		}
 	}
 }
 .serv{
