--- a/src/sass/layout/_odnausluga-v2.scss
+++ b/src/sass/layout/_odnausluga-v2.scss
@@ -53,7 +53,6 @@
 			.img{
 				width: 260px;
 				height: 340px;
-				border: 5px dotted #000;
 				margin-right: 25px;
 				float: left;
 			}
@@ -100,16 +99,20 @@
 			display: -ms-flexbox;
 			display: -webkit-flex;
 			display: flex;
+			float: left;
 			align-items: stretch;
-			margin-bottom: 35px;
 			&-sh{
+				margin-bottom: 35px;
 				position: relative;
-				 &:after{
+				display: inline-block;
+				@include clearfix;
+
+				 &:before{
 				 	content: '';
 				 	display: block;
 					position: absolute;
 					bottom: 0;
-					margin-bottom: -32px;
+					margin-bottom: -30px;
 					width: 100%;
 					left: 0;
 					height: 35px;
@@ -140,7 +143,8 @@
 		    @include font-size(16px);
 		    color: $green-header;
 		    background: #e9fcf2;
-		    padding: 25px 0;
+		    padding: 25px 10px;
+		    min-height: 88px;
 		}
 	}
 	&-items{
@@ -175,7 +179,7 @@
 				&:after{
 					content: '\20BD';
 					font-family: sans-serif;
-					margin-left: -2px;
+					margin-left: 5px;
 				}
 			}
 		}
